package com.fyp;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class personalPorfileActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_personal_porfile);
    }
}